src/main/java/bo/com/bisa/gpgw/msaccount/web/rest/errors/spec/LoginAlreadyUsedException.java
package bo.com.bisa.gpgw.msaccount.web.rest.errors.spec;

import bo.com.bisa.gpgw.msaccount.web.rest.errors.BadRequestAlertException;

public class LoginAlreadyUsedException extends BadRequestAlertException {

    private static final long serialVersionUID = 1L;

    public LoginAlreadyUsedException() {
        super("USER_EXISTS", "Login name already used!");
    }
}
